--- a/package.json
+++ b/package.json
@@ -5,18 +5,34 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@davidgovea/react-native-wheel-datepicker": "^1.0.2",
+    "@expo/metro-runtime": "~4.0.1",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/stack": "^7.1.2",
     "expo": "~52.0.37",
+    "expo-av": "~15.0.2",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.4.0",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-dom": "18.3.1",
+    "react-native": "0.76.7",
+    "react-native-audio-recorder-player": "^3.6.12",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-permissions": "^5.2.6",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.9.1",
+    "react-native-svg": "15.8.0",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.25.2"
   },
   "private": true
 }
